RESOLVED FIXED278120
xywh() shape's dimensions should not accept negative values
https://bugs.webkit.org/show_bug.cgi?id=278120
Summary xywh() shape's dimensions should not accept negative values
Simon Fraser (smfr)
Reported 2024-08-14 13:14:50 PDT
https://www.w3.org/TR/css-shapes/#supported-basic-shapes says: xywh() = xywh( <length-percentage>{2} <length-percentage [0,∞]>{2} [ round <'border-radius'> ]? ) We fail to respect the [0,∞].
Attachments
Radar WebKit Bug Importer
Comment 1 2024-08-14 13:15:19 PDT
Simon Fraser (smfr)
Comment 2 2024-08-14 13:17:29 PDT
EWS
Comment 3 2024-08-14 15:44:18 PDT
Committed 282264@main (935d438f1288): <https://commits.webkit.org/282264@main> Reviewed commits have been landed. Closing PR #32208 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.