xywh() shape's dimensions should not accept negative values https://bugs.webkit.org/show_bug.cgi?id=278120 rdar://133870976

Reviewed by Tim Nguyen.

Disallow negative values in the "dimension" arguments of the `xywh()` shape, per spec[1]

[1] https://www.w3.org/TR/css-shapes/#supported-basic-shapes

* LayoutTests/imported/w3c/web-platform-tests/css/css-shapes/shape-functions/xywh-function-invalid-expected.txt:
* Source/WebCore/css/parser/CSSPropertyParserHelpers.cpp:
(WebCore::CSSPropertyParserHelpers::consumeBasicShapeXywh):

Canonical link: https://commits.webkit.org/282264@main